# newsrss

./: Makefile  README.md  pyproject.toml
newsrss/: __main__.py
